--- a/data/sources/protest-cz.yaml
+++ b/data/sources/protest-cz.yaml
@@ -141,10 +141,10 @@ series:
         dtstart: 2021-10-26 18:00:00+02:00
         dtend: 2021-10-26 19:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Nov 30, 6:00 PM CET: Annotation
+      meta_description: 'Tue, Nov 30, 6:00 PM  CET: Annotation
 
         Puppeteer is a node library that provides high-level API to control chrome and chromium. Puppeteer can also be used for browser automation as it has all capabili'
-      og_title: 104. [pro:]TEST! – Vivek Shringi about Puppeteer | Meetup
+      og_title: 104. [pro:]TEST! – Vivek Shringi about Puppeteer, Tue, Nov 30, 2021, 6:00 PM   | Meetup
       image: https://secure.meetupstatic.com/photos/event/b/b/0/e/600_500267886.jpeg
       url: https://www.meetup.com/protest_cz/events/282124529/
       ical:
@@ -167,10 +167,10 @@ series:
         dtstart: 2021-11-30 18:00:00+01:00
         dtend: 2021-11-30 19:00:00+01:00
   - meetupcom:
-      meta_description: 'Tue, Jan 25, 6:00 PM CET: Jednou možná přijde čas, kdy se i vaše QA oddělení stane úzkým hrdlem vývoje.
+      meta_description: 'Tue, Jan 25, 6:00 PM  CET: Jednou možná přijde čas, kdy se i vaše QA oddělení stane úzkým hrdlem vývoje.
 
         A jak z toho následně ven, obzvlášť v době, kdy najít dobrého testera na trhu práce je značně '
-      og_title: 105. [pro:]TEST! – Libor Šimo o teorii omezení | Meetup
+      og_title: 105. [pro:]TEST! – Libor Šimo o teorii omezení, Tue, Jan 25, 2022, 6:00 PM   | Meetup
       url: https://www.meetup.com/protest_cz/events/283227886/
       ical:
         summary: 105. [pro:]TEST! – Libor Šimo o teorii omezení
