--- a/data/sources/topmonks-caffe.yaml
+++ b/data/sources/topmonks-caffe.yaml
@@ -238,7 +238,10 @@ series:
         dtstart: 2022-03-01 19:00:00+01:00
         dtend: 2022-03-01 21:00:00+01:00
   - meetupcom:
-      meta_description: 'Tue, Apr 5, 7:00 PM  CEST: Potkáme se osobně u pivka a dýmky v Loft N8 a tentokrát si budeme povídat s Jirkou Píšou a Gabrielou Jičínskou o kompletní změně kariéry. Přijďte si poslechnout jaká byla j'
+      meta_description: 'Tue, Apr 5, 7:00 PM  CEST: Potkáme se osobně u pivka a dýmky v Loft N8.
+
+
+        Svůj příběh o změně kariéry nám prozradí Gabriela Jičínská, Jirka Píša, Phuc Nguyen a Holdy-Kurth Mouyabi. Přijďte si poslechn'
       og_title: Změna kariéry, Tue, Apr 5, 2022, 7:00 PM   | Meetup
       url: https://www.meetup.com/TopMonks-Caffe/events/284921450/
       ical:
@@ -248,7 +251,7 @@ series:
           Tuesday, April 5 at 7:00 PM
 
 
-          Potkáme se osobně u pivka a dýmky v Loft N8 a tentokrát si budeme povídat s Jirkou Píšou a Gabrielou Jičínskou o kompletní změně kariéry. Přijďte si p...
+          Potkáme se osobně u pivka a dýmky v Loft N8. Svůj příběh o změně kariéry nám prozradí Gabriela Jičínská, Jirka Píša, Phuc Nguyen a Holdy-Kurth Mouyabi...
 
 
           https://www.meetup.com/TopMonks-Caffe/events/284921450/'
