--- a/data/sources/naswp-cz.yaml
+++ b/data/sources/naswp-cz.yaml
@@ -162,14 +162,14 @@ series:
         dtstart: 2021-10-27 18:30:00+02:00
         dtend: 2021-10-27 21:30:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Nov 24, 6:30 PM CET: Pojďte si s námi sednout alespoň virtuálně a zúčastnit se online srazu české wordpressové komunity.
+      meta_description: 'Wed, Nov 24, 6:30 PM  CET: Pojďte si s námi sednout alespoň virtuálně a zúčastnit se online srazu české wordpressové komunity.
 
 
         📢 Program
 
 
         – 18:30 Úvodní slovo a novinky ze světa WordPressu (Karolín'
-      og_title: 'WordPress Pivo #7 | Meetup'
+      og_title: 'WordPress Pivo #7, Wed, Nov 24, 2021, 6:30 PM   | Meetup'
       image: https://secure.meetupstatic.com/photos/event/6/5/4/f/600_499585935.jpeg
       url: https://www.meetup.com/naswp-cz/events/281507008/
       ical:
@@ -192,14 +192,14 @@ series:
         dtstart: 2021-11-24 18:30:00+01:00
         dtend: 2021-11-24 21:30:00+01:00
   - meetupcom:
-      meta_description: 'Wed, Jan 26, 6:30 PM CET: Pojďte si s námi sednout alespoň virtuálně a zúčastnit se online srazu české wordpressové komunity.
+      meta_description: 'Wed, Jan 26, 6:30 PM  CET: Pojďte si s námi sednout alespoň virtuálně a zúčastnit se online srazu české wordpressové komunity.
 
 
         📢 Program (anotace níže)
 
 
         – 18:30 Úvodní slovo a novinky ze světa Word'
-      og_title: 'WordPress Pivo #8 | Meetup'
+      og_title: 'WordPress Pivo #8, Wed, Jan 26, 2022, 6:30 PM   | Meetup'
       image: https://secure.meetupstatic.com/photos/event/4/f/b/b/600_500180411.jpeg
       url: https://www.meetup.com/naswp-cz/events/282061091/
       ical:
