--- a/data/sources/typedb-prague.yaml
+++ b/data/sources/typedb-prague.yaml
@@ -1022,3 +1022,27 @@ series:
         url: https://www.meetup.com/typedb-prague/events/284827466/
         dtstart: 2022-04-06 18:30:00+02:00
         dtend: 2022-04-06 19:30:00+02:00
+  - meetupcom:
+      meta_description: 'Tue, Apr 26, 6:30 PM  CEST: Graph databases have matured into mainstream technologies and deliver tremendous value to organisations across any industry. They are more flexible than traditional relatio'
+      og_title: ' Graph Databases vs TypeDB | What You Can''t do With Graphs, Tue, Apr 26, 2022, 6:30 PM   | Meetup'
+      url: https://www.meetup.com/typedb-prague/events/284941876/
+      ical:
+        summary: ' Graph Databases vs TypeDB | What You Can''t do With Graphs'
+        description: 'TypeDB Prague Engineers
+
+          Tuesday, April 26 at 6:30 PM
+
+
+          Graph databases have matured into mainstream technologies and deliver tremendous value to organisations across any industry. They are more flexible th...
+
+
+          https://www.meetup.com/typedb-prague/events/284941876/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_284941876@meetup.com
+        url: https://www.meetup.com/typedb-prague/events/284941876/
+        dtstart: 2022-04-26 18:30:00+02:00
+        dtend: 2022-04-26 19:30:00+02:00
