data: cron update

--- a/data/sources/prague-devops.yaml
+++ b/data/sources/prague-devops.yaml
@@ -217,10 +217,10 @@ series:
         The first hybrid and the second this year DevOps meetup is here and we are ready to welcome all DevOps enthusiasts, from Prague or elsewhere.
 
         The structure of'
-      og_title: Prague DevOps meetup online (April 2022), Wed, Apr 6, 2022, 7:00 PM   | Meetup
+      og_title: Prague DevOps meetup hybrid (April 2022), Wed, Apr 6, 2022, 7:00 PM   | Meetup
       url: https://www.meetup.com/Prague-DevOps-Meetup/events/283816829/
       ical:
-        summary: Prague DevOps meetup online (April 2022)
+        summary: Prague DevOps meetup hybrid (April 2022)
         description: 'Prague DevOps Meetup
 
           Wednesday, April 6 at 7:00 PM
