--- a/data/sources/api-prague.yaml
+++ b/data/sources/api-prague.yaml
@@ -24,7 +24,7 @@ series:
 
 
           https://www.meetup.com/api-prague/events/280531427/'
-        location: Paralelní Polis (Dělnická 475, Praha 7-Holešovice, Czech Republic 170 00)
+        location: Paralelní Polis (Dělnická, Praha 7-Holešovice, Czech Republic 170 00)
         geo:
           lat: 50.08
           lon: 14.43
