data: cron update

--- a/data/sources/datascript-morning-talks.yaml
+++ b/data/sources/datascript-morning-talks.yaml
@@ -815,3 +815,32 @@ series:
         url: https://www.meetup.com/Morning-Talks/events/284327602/
         dtstart: 2022-04-26 09:00:00+02:00
         dtend: 2022-04-26 10:00:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, Apr 27, 9:00 AM  CEST: **Prosíme Vás o registraci přímo na stránkách Datascriptu:**
+
+        https://www.datascript.cz/morning-talks/microservices-patterny-a-jejich-pouziti-v-praxi/
+
+
+        Uděláme si menší výle'
+      og_title: MICROSERVICES PATTERNY A JEJICH POUŽÍTÍ V PRAXI, Wed, Apr 27, 2022, 9:00 AM   | Meetup
+      url: https://www.meetup.com/Morning-Talks/events/284327603/
+      ical:
+        summary: MICROSERVICES PATTERNY A JEJICH POUŽÍTÍ V PRAXI
+        description: 'Morning Talks
+
+          Wednesday, April 27 at 9:00 AM
+
+
+          **Prosíme Vás o registraci přímo na stránkách Datascriptu:**https://www.datascript.cz/morning-talks/microservices-patterny-a-jejich-pouziti-v-praxi/ U...
+
+
+          https://www.meetup.com/Morning-Talks/events/284327603/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_284327603@meetup.com
+        url: https://www.meetup.com/Morning-Talks/events/284327603/
+        dtstart: 2022-04-27 09:00:00+02:00
+        dtend: 2022-04-27 10:00:00+02:00
