--- a/data/sources/prague-devops.yaml
+++ b/data/sources/prague-devops.yaml
@@ -6,13 +6,13 @@ series:
     image: https://secure.meetupstatic.com/photos/event/6/e/7/4/600_474748276.jpeg
   events:
   - meetupcom:
-      meta_description: 'Wed, Sep 8, 7:00 PM CEST: Hello doers,
+      meta_description: 'Wed, Sep 8, 7:00 PM  CEST: Hello doers,
 
 
         The third online DevOps meetup is here and we are ready to welcome all DevOps enthusiasts, from Prague or elsewhere.
 
         The structure of the session will be one '
-      og_title: Prague DevOps meetup online (September) | Meetup
+      og_title: Prague DevOps meetup online (September), Wed, Sep 8, 2021, 7:00 PM   | Meetup
       image: https://secure.meetupstatic.com/photos/event/6/e/7/4/600_474748276.jpeg
       url: https://www.meetup.com/Prague-DevOps-Meetup/events/280234441/
       ical:
@@ -123,13 +123,13 @@ series:
         dtstart: 2020-02-24 18:00:00+01:00
         dtend: 2020-02-24 21:00:00+01:00
   - meetupcom:
-      meta_description: 'Wed, Nov 3, 6:00 PM CET: Hello doers,
+      meta_description: 'Wed, Nov 3, 6:00 PM  CET: Hello doers,
 
 
         The fourth online DevOps meetup is here and we are ready to welcome all DevOps enthusiasts, from Prague or elsewhere.
 
         The structure of the session will be one'
-      og_title: Prague DevOps meetup online (November) | Meetup
+      og_title: Prague DevOps meetup online (November), Wed, Nov 3, 2021, 6:00 PM   | Meetup
       image: https://secure.meetupstatic.com/photos/event/6/e/7/4/600_474748276.jpeg
       url: https://www.meetup.com/Prague-DevOps-Meetup/events/281198432/
       ical:
