--- a/data/sources/ruby-praha.yaml
+++ b/data/sources/ruby-praha.yaml
@@ -244,3 +244,24 @@ series:
         url: https://www.meetup.com/Praguerb/events/dkmktfydckbjb/
         dtstart: 2022-07-06 19:00:00+02:00
         dtend: 2022-07-06 22:00:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, Aug 3, 7:00 PM  CEST: '
+      og_title: First Wednesday Of The Month - Ruby, Wed, Aug 3, 2022, 7:00 PM   | Meetup
+      url: https://www.meetup.com/Praguerb/events/dkmktfydclbfb/
+      ical:
+        summary: First Wednesday Of The Month - Ruby
+        description: 'Prague.rb / CSRUG
+
+          Wednesday, August 3 at 7:00 PM
+
+
+          https://www.meetup.com/Praguerb/events/dkmktfydclbfb/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_dkmktfydclbfb@meetup.com
+        url: https://www.meetup.com/Praguerb/events/dkmktfydclbfb/
+        dtstart: 2022-08-03 19:00:00+02:00
+        dtend: 2022-08-03 22:00:00+02:00
