data: cron update

--- a/data/sources/purestorage.yaml
+++ b/data/sources/purestorage.yaml
@@ -109,11 +109,11 @@ series:
         dtstart: 2020-12-17 18:00:00+01:00
         dtend: 2020-12-17 19:30:00+01:00
   - meetupcom:
-      meta_description: 'Mon, Oct 11, 8:00 AM CEST: Innovation. A buzzword for some, daily bread for us.
+      meta_description: 'Mon, Oct 11, 8:00 AM  CEST: Innovation. A buzzword for some, daily bread for us.
 
 
         It started with an innovative idea of two brilliant minds, and since then the innovative mindset has become deeply roo'
-      og_title: Pure Storage @ Innovation Week | Meetup
+      og_title: Pure Storage @ Innovation Week, Mon, Oct 11, 2021, 8:00 AM   | Meetup
       image: https://secure.meetupstatic.com/photos/event/a/a/1/4/600_499303540.jpeg
       url: https://www.meetup.com/Pure-Storage-Talks/events/281246298/
       ical:
@@ -137,8 +137,8 @@ series:
         dtstart: 2021-10-11 08:00:00+02:00
         dtend: 2021-10-11 18:00:00+02:00
   - meetupcom:
-      meta_description: 'Thu, Nov 11, 6:00 PM CEST: 𝐀𝐛𝐨𝐮𝐭 𝐭𝐡𝐞 𝐭𝐚𝐥𝐤: although there is an endless number of technical questions you can be asked during an interview, there are some common patterns that come up ver'
-      og_title: How to Nail Your Next Technical Interview | Meetup
+      meta_description: 'Thu, Nov 11, 6:00 PM  CET: 𝐀𝐛𝐨𝐮𝐭 𝐭𝐡𝐞 𝐭𝐚𝐥𝐤: although there is an endless number of technical questions you can be asked during an interview, there are some common patterns that come up ver'
+      og_title: How to Nail Your Next Technical Interview, Thu, Nov 11, 2021, 6:00 PM   | Meetup
       image: https://secure.meetupstatic.com/photos/event/6/7/b/d/600_499466557.jpeg
       url: https://www.meetup.com/Pure-Storage-Talks/events/281401178/
       ical:
