--- a/data/sources/the-social-programmers.yaml
+++ b/data/sources/the-social-programmers.yaml
@@ -214,3 +214,30 @@ series:
         url: https://www.meetup.com/the-social-programers/events/285079354/
         dtstart: 2022-04-07 19:30:00+02:00
         dtend: 2022-04-07 21:30:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, Apr 13, 7:30 PM  CEST: Coding Session
+
+
+        Let''s have a drink and code together and build something interesting. Work on your own project or join in on the group project or just get advise, grab a la'
+      og_title: Coding session V8, Wed, Apr 13, 2022, 7:30 PM   | Meetup
+      url: https://www.meetup.com/the-social-programers/events/285201541/
+      ical:
+        summary: Coding session V8
+        description: 'The Social Programmers
+
+          Wednesday, April 13 at 7:30 PM
+
+
+          Coding Session Let''s have a drink and code together and build something interesting. Work on your own project or join in on the group project or just ...
+
+
+          https://www.meetup.com/the-social-programers/events/285201541/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_285201541@meetup.com
+        url: https://www.meetup.com/the-social-programers/events/285201541/
+        dtstart: 2022-04-13 19:30:00+02:00
+        dtend: 2022-04-13 21:30:00+02:00
