--- a/data/sources/gdg-prague.yaml
+++ b/data/sources/gdg-prague.yaml
@@ -883,3 +883,39 @@ series:
         url: https://www.meetup.com/GDGPrague/events/xqcsqsydchbgc/
         dtstart: 2022-05-24 18:30:00+02:00
         dtend: 2022-05-24 20:30:00+02:00
+  - meetupcom:
+      meta_description: 'Tue, Jun 7, 6:30 PM  CEST: • How to join?
+
+        Online only because of covid https://discord.gg/TnaMJMyTDw
+
+
+        • What we''ll do
+
+        https://sites.google.com/site/garagepragueone/home
+
+
+        http://gdg-garage.github.io/
+
+        '
+      og_title: GDG Garage Prague One, Tue, Jun 7, 2022, 6:30 PM   | Meetup
+      url: https://www.meetup.com/GDGPrague/events/xqcsqsydcjbkb/
+      ical:
+        summary: GDG Garage Prague One
+        description: 'GDG Prague
+
+          Tuesday, June 7 at 6:30 PM
+
+
+          • How to join?Online only because of covid https://discord.gg/TnaMJMyTDw • What we''ll dohttps://sites.google.com/site/garagepragueone/home...
+
+
+          https://www.meetup.com/GDGPrague/events/xqcsqsydcjbkb/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_xqcsqsydcjbkb@meetup.com
+        url: https://www.meetup.com/GDGPrague/events/xqcsqsydcjbkb/
+        dtstart: 2022-06-07 18:30:00+02:00
+        dtend: 2022-06-07 20:30:00+02:00
