data: cron update

--- a/data/sources/productboard.yaml
+++ b/data/sources/productboard.yaml
@@ -221,10 +221,10 @@ series:
         dtstart: 2022-02-09 18:00:00+01:00
         dtend: 2022-02-09 20:00:00+01:00
   - meetupcom:
-      meta_description: 'Wed, Apr 20, 6:00 PM  CEST: Get inspiration from people who have found their voice and propelled their careers in leadership roles in the software engineering industry.
+      meta_description: 'Wed, Apr 20, 6:00 PM  CEST: Get inspired by people who have stepped up, found their voice, and propelled their careers in leadership roles in the software engineering industry.
 
 
-        **Join us for our in-person** '
+        **Join us in person (f'
       og_title: Engineering Leadership Meetup, Wed, Apr 20, 2022, 6:00 PM   | Meetup
       url: https://www.meetup.com/productboard-meetups/events/285226408/
       ical:
@@ -234,7 +234,7 @@ series:
           Wednesday, April 20 at 6:00 PM
 
 
-          Get inspiration from people who have found their voice and propelled their careers in leadership roles in the software engineering industry. **Join us...
+          Get inspired by people who have stepped up, found their voice, and propelled their careers in leadership roles in the software engineering industry. *...
 
 
           https://www.meetup.com/productboard-meetups/events/285226408/'
